# chat-sdp-rs

./: Cargo.toml  README.md  cspell.json
src/: action.rs  client.rs  connect.rs  data.rs  main.rs  message.rs  response.rs  room.rs  transmit.rs
src/client/: action.rs  client.rs  client_struct.rs  mod.rs
src/room/: action.rs  mod.rs  room.rs  room_struct.rs
